# asymptote

./: .asy_history  .clang-format  .dockerignore  .gdbinit  .gitattributes  .gitignore  .htaccess  .pylintrc  BUGS  CMakeLists.txt  CMakePresets.json  ChangeLog  Compile  DISTRIBUTION-LICENSE-NOTICE.md  Delaunay.cc  Delaunay.h  Dockerfile  Dockerfile.dev  Dockerfile.online  EXRFiles.cc  EXRFiles.h  GLTextures.cc  GLTextures.h  INSTALL  INSTALL-VCPKG.md  INSTALL-WIN.md  INSTALL.md  LICENSE-APACHE.TXT  LICENSES-THIRD-PARTY.md  MAINTAINER-LICENSE-GUIDE.md  Makefile.in  Optional.hpp  README  TODO  ThreadSafeQueue.h  abs3doutfile.h  absyn.cc  absyn.h  access.cc  access.h  (+358 more)
LspCpp/: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .gitrepo  CMakeLists.txt  CMakePresets.json  LICENSE  LspCpp.filters  LspCpp.vcxproj  LspCpp.vcxproj.filters  Makefile  README.md  packages.config  vcpkg.json
LspCpp/.github/actions/initialize-linux-env/: action.yaml
LspCpp/.github/actions/initialize-windows-env/: action.yml
LspCpp/.github/workflows/: build-lsp-linux.yaml  build-lsp-windows.yaml  check-format-cpp.yaml  pull-req-precheck.yaml
LspCpp/LibLsp/JsonRpc/: Context.cpp  Endpoint.cpp  GCThreadContext.cpp  MessageJsonHandler.cpp  NotificationInMessage.h  Optional.hpp  RemoteEndPoint.cpp  StreamMessageProducer.cpp  TcpServer.cpp  WebSocketServer.cpp  WebSocketServer.h  json.h  lsResponseMessage.h  message.cpp  serializer.cpp  serializer.h  stream.h
LspCpp/LibLsp/lsp/: ParentProcessWatcher.cpp  ProtocolJsonHandler.cpp  lsp.cpp  lsp_diagnostic.cpp  utils.cpp  working_files.cpp
LspCpp/LibLsp/lsp/Markup/: Markup.cpp  string_ref.h
LspCpp/LibLsp/lsp/extention/sct/: SCTConfig.h  protocol.h  sct.cpp  sct.h
LspCpp/LibLsp/lsp/general/: initialize.cpp
LspCpp/LibLsp/lsp/textDocument/: textDocument.cpp
LspCpp/example/: StdIOClientExample.cpp  StdIOServerExample.cpp  TcpServerExample.cpp  WebsocketExample.cpp
LspCpp/examples/: StdIOClientExample.cpp  StdIOServerExample.cpp  TcpServerExample.cpp  WebsocketExample.cpp
LspCpp/include/LibLsp/JsonRpc/: MessageIssue.h  RemoteEndPoint.h  TcpServer.h  WebSocketServer.h  filesystemVersion.h  json.h  optional.hpp  optionalVersion.h  serializer.h  threaded_queue.h
LspCpp/include/LibLsp/lsp/: ClientPreferences.h  CodeActionParams.h  ExecuteCommandParams.h  IProgressMonitor.h  ParentProcessWatcher.h  ProcessIoService.h  ResourceOperation.h  SimpleTimer.h  asio.h  location_type.h  lru_cache.h  lsAny.h  lsCodeAction.h  lsCommand.h  lsFormattingOptions.h  lsMarkedString.h  lsResponseError.h  lsTextDocumentPositionParams.h  lsTextEdit.h  lsVersionedTextDocumentIdentifier.h  lsWorkspaceEdit.h  lsp_completion.h  lsp_diagnostic.h  out_list.h  symbol.h  utils.h
LspCpp/include/LibLsp/lsp/Markup/: string_ref.h
LspCpp/include/LibLsp/lsp/general/: InitializeParams.h  exit.h  lsClientCapabilities.h  lsServerCapabilities.h  lsTextDocumentClientCapabilities.h  lsWorkspaceClientCapabilites.h  progress.h  shutdown.h
LspCpp/include/LibLsp/lsp/language/: language.h
LspCpp/include/LibLsp/lsp/textDocument/: SemanticTokens.h  callHierarchy.h  (+18 more)
LspCpp/network/: string_view.hpp
LspCpp/network/uri/: uri.cpp  uri.hpp  uri_builder.cpp  uri_builder.hpp
LspCpp/network/uri/detail/: encode.hpp  grammar.hpp  uri_advance_parts.cpp  uri_advance_parts.hpp  uri_normalize.cpp  uri_parse.cpp  uri_parts.hpp  uri_resolve.cpp
LspCpp/src/jsonrpc/: Context.cpp  Endpoint.cpp  GCThreadContext.cpp  MessageJsonHandler.cpp  RemoteEndPoint.cpp  StreamMessageProducer.cpp  TcpServer.cpp  WebSocketServer.cpp  message.cpp  serializer.cpp  threaded_queue.cpp
LspCpp/src/lsp/: Markup.cpp  ParentProcessWatcher.cpp  ProtocolJsonHandler.cpp  initialize.cpp  lsp.cpp  lsp_diagnostic.cpp  textDocument.cpp  utils.cpp  working_files.cpp
LspCpp/support/cmake/: distclean.cmake  lspcpp-config.cmake.in  lspcpp.pc.in
backports/getopt/: CMakeLists.txt  LICENSE.txt
backports/getopt/include/: getopt.h
backports/getopt/src/: getopt1.c
backports/glew/: CMakeLists.txt  LICENSE.txt
backports/glew/include/GL/: glew.h  glxew.h  wglew.h
backports/glew/src/: glew.c
cudareflect/: CMakeLists.txt  EXRFiles.cc  EXRFiles.h  IrradianceGenerator.sln  IrradianceGenerator.vcxproj  Makefile  ReflectanceMapper.cu  ReflectanceMapper.cuh  common.h  kernel.cu  kernel.h  linalg.cuh  main.cc  main.cpp  simpson.cuh  tinyexr.cc  utils.cuh
cudareflect/tinyexr/: .gitrepo  tinyexr.h
cudareflect/tinyexr/experimental/js/: compile_to_js.sh  tinyexr.js
cxxtests/: CMakeLists.txt
cxxtests/cmake-scripts/: external-libs.cmake  tests.cmake
cxxtests/include/asycxxtests/: common.h
cxxtests/src/: testMain.cc
cxxtests/tests/: ThreadSafeQueue.cc  placeholder.cc
libatomic_ops/: .appveyor.yml  .gitignore  .gitrepo  .travis.yml  CMakeLists.txt  ChangeLog  Config.cmake.in  Makefile.am  README.md  README_details.txt  README_malloc.txt  README_stack.txt  README_win32.txt  configure.ac
libatomic_ops/src/: Makefile.am  Makefile.msft  atomic_ops.c  atomic_ops.h  atomic_ops_malloc.c  atomic_ops_stack.c  atomic_ops_stack.h
libatomic_ops/src/atomic_ops/: ao_version.h
libatomic_ops/src/atomic_ops/sysdeps/: standard_ao_double_t.h
libatomic_ops/tests/: Makefile.am  list_atomic.template  run_parallel.h  test_atomic.c  test_atomic_include.h  test_atomic_include.template  test_malloc.c  test_stack.c
prc/: CMakeLists.txt  Makefile  PRC.h  PRCbitStream.cc  PRCbitStream.h  PRCdouble.cc  PRCdouble.h  oPRCFile.cc  oPRCFile.h  test.asy  test.cc  writePRC.cc  writePRC.h
prc/PRCTools/: Makefile  bitData.cc  bitData.h  bitSearchDouble.cc  bitSearchUI.cc  describeMain.cc  describePRC.cc  describePRC.h  extractSections.cc  iPRCFile.cc  iPRCFile.h  inflation.cc  inflation.h  inflationMain.cc  makePRC.cc
prc/include/prc/: oPRCFile.h  writePRC.h
thirdparty_impl/tinyexr_impl/: CMakeLists.txt
thirdparty_impl/tinyexr_impl/src/: tinyexr_impl.cc
thirdparty_impl/vk-mem-allocator_impl/: CMakeLists.txt
thirdparty_impl/vk-mem-allocator_impl/include/: vma_cxx.h
thirdparty_impl/vk-mem-allocator_impl/src/: vma_cxx.cc  vma_impl.cc
(+1419 files in other folders)
